RESOLVED FIXED243518
REGRESSION(248082@main): wpt /html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/forward-to-pruned-entry.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=243518
Summary REGRESSION(248082@main): wpt /html/browsers/browsing-the-web/overlapping-navi...
Sam Sneddon [:gsnedders]
Reported 2022-08-03 16:12:34 PDT
While the commit message for 248082@main references several tests in this directory, it doesn't mention forward-to-pruned-entry.html, and per wpt.fyi passes in both Chrome and Firefox: https://wpt.fyi/results/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/forward-to-pruned-entry.html?label=master&label=experimental&aligned
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-03 16:12:45 PDT
Chris Dumez
Comment 2 2022-08-03 16:39:08 PDT
The test is passing in our layout infrastructure: ``` cat LayoutTests/imported/w3c/web-platform-tests/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/forward-to-pruned-entry-expected.txt PASS If forward pruning clobbers the target of a traverse, abort ``` It seems to flakily pass when opening in browser via http://wpt.live/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/tentative/forward-to-pruned-entry.html
Chris Dumez
Comment 3 2022-08-03 21:06:03 PDT
(In reply to Chris Dumez from comment #2) > The test is passing in our layout infrastructure: > ``` > cat > LayoutTests/imported/w3c/web-platform-tests/html/browsers/browsing-the-web/ > overlapping-navigations-and-traversals/tentative/forward-to-pruned-entry- > expected.txt > > PASS If forward pruning clobbers the target of a traverse, abort > ``` > > It seems to flakily pass when opening in browser via > http://wpt.live/html/browsers/browsing-the-web/overlapping-navigations-and- > traversals/tentative/forward-to-pruned-entry.html According to the flakiness dashboard, the test is indeed flaky.
Chris Dumez
Comment 4 2022-08-03 21:23:10 PDT
Chris Dumez
Comment 5 2022-08-04 08:12:02 PDT
EWS
Comment 6 2022-08-04 11:01:57 PDT
Committed 253121@main (86b715c057a4): <https://commits.webkit.org/253121@main> Reviewed commits have been landed. Closing PR #3009 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.